# my-first-mcp-client

./: .env  INSTALL.md  INSTALL_OLLAMA.md  README.md  TEST_README.md  client.py  pyproject.toml  pytest.ini  test_client.py
